[package]
name = "node-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", branch = "net-sync" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", branch = "net-sync" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", branch = "net-sync" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", branch = "net-sync" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
